# slbit

./: Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
docs/: packet_spec.md  packet_v2.md  packet_v3.md
examples/: agent_trace_v2.rs  ci_formal_verification_v2.rs  drone_observation.rs  drone_perception_v2.rs  financial_audit_v2.rs  human_approval_annotation_v2.rs  medical_ai_decision_v2.rs  multi_agent_governance_v2.rs  smart_contract_proof_v2.rs  supply_chain_provenance_v2.rs  zkml_classification_v2.rs
src/: lib.rs  v2.rs  v3.rs
tests/: public_api.rs  v3_meaning.rs
