[package]
name = "slbit"
version = "0.2.0"
edition = "2021"
authors = ["MFENX LLC"]
description = "Zero-dependency luminous semantic packets for verifiable computation, AI traces, and proof UX."
documentation = "https://docs.rs/slbit"
repository = "https://github.com/JROChub/slbit"
homepage = "https://mfenx.com"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["proofs", "semantics", "zkml", "agents", "visualization"]
categories = ["data-structures", "development-tools"]
include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "RELEASE_NOTES.md",
  "docs/**",
  "src/**",
  "examples/**",
  "tests/**",
]

[dependencies]
