[package]
name = "slbit"
version = "3.1.0"
edition = "2021"
authors = ["MFENX LLC"]
description = "Zero-dependency Meaning Observatory packets for verifiable memory, AI traces, and proof UX."
documentation = "https://docs.rs/slbit"
repository = "https://github.com/JROChub/slbit"
homepage = "https://mfenx.com"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["proofs", "semantics", "zkml", "agents", "visualization"]
categories = ["data-structures", "development-tools"]
include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "RELEASE_NOTES.md",
  "docs/**",
  "src/**",
  "examples/**",
  "tests/**",
]

[dependencies]
